// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Newrelic Alert Plugin getApiGatewayAlertsCloudFormation should generate alerts for all api gateways 1`] = `
Object {
  "TestServiceTestApiGateway4XxErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ApiGatewaySample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "apiName": Array [
                  "api-gatway",
                  "api-gatway2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Api Gateway 4 XX Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.4xxError.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestApiGateway5XxErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ApiGatewaySample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "apiName": Array [
                  "api-gatway",
                  "api-gatway2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Api Gateway 5 XX Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.5xxError.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getDynamoDbAlertsCloudFormation should generate alerts for all dynamo tables 1`] = `
Object {
  "TestServiceTestDynamoDbBatchGetSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Batch Get System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.batchGetSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbBatchWriteSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Batch Write System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.batchWriteSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbDeleteSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Delete System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.deleteSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbGetSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Get System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.getSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbPutSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Put System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.putSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbQuerySystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Query System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.querySystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbScanSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Scan System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.scanSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbUpdateSystemErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db Update System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.updateSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestDynamoDbUserErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "table": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Dynamo Db User Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.userErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getFunctionAlertsCloudFormation should generate global alerts for all functions 1`] = `
Object {
  "TestServiceTestFunctionDuration1Sec": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 1000,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-function",
                  "test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Function Duration 1 Sec",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.duration.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestFunctionErrors": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-function",
                  "test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Function Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.errors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "TestServiceTestFunctionThrottles": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-function",
                  "test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Function Throttles",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.throttles.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getFunctionAlertsCloudFormation should generate local defined alerts functions 1`] = `
Object {
  "TestServiceTestFunctionNameAlertTitle": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 1000,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Function Name Alert Title",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.duration.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getInfrastructureConditionCloudFormation should generate valid infrastructure condition 1`] = `
Object {
  "": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getPolicyCloudFormation should generate valid policy 1`] = `
Object {
  "TestServiceTestNewRelicPolicy": Object {
    "Properties": Object {
      "ServiceToken": "policy-token",
      "policy": Object {
        "incident_preference": undefined,
        "name": "TestService TEST",
      },
    },
    "Type": "Custom::NewRelicPolicy",
  },
}
`;

exports[`Newrelic Alert Plugin getSqsAlertsCloudFormation should generate alerts for all dead letter queues 1`] = `
Object {
  "TestServiceTestSqsDlqVisibleMessages": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "QueueSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "queueName": Array [
                  "simple-queue-dlq",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "TestService TEST - Sqs Dlq Visible Messages",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.approximateNumberOfMessagesVisible.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;
